Bug 1230397 - Write safe mode pref on the main thread r=dbaron